--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ version '1.0-SNAPSHOT'
 buildscript {
     ext.kotlin_version = '1.1.61'
     ext.spark_version = '2.5.5'
+    ext.retrofit_version = '2.2.0'
+    ext.gson_version = '2.6.2'
 
     repositories {
         jcenter()
@@ -28,6 +30,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "com.sparkjava:spark-core:$spark_version"
     compile "org.slf4j:slf4j-simple:1.7.24"
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
