--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.spark_version = '2.5.5'
     ext.retrofit_version = '2.2.0'
     ext.gson_version = '2.6.2'
+    ext.dagger_version = '2.4'
 
     repositories {
         jcenter()
@@ -18,6 +19,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 
 sourceCompatibility = 1.8
 
@@ -32,6 +34,8 @@ dependencies {
     compile "org.slf4j:slf4j-simple:1.7.24"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
