--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
@@ -44,4 +45,24 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+idea {
+    module {
+        // https://youtrack.jetbrains.com/issue/IDEA-117540
+        //excludeDirs -= file("$buildDir")
+        excludeDirs += file("$buildDir/dependency-cache")
+        excludeDirs += file("$buildDir/libs")
+        excludeDirs += file("$buildDir/tmp")
+        excludeDirs += file("$buildDir/reports")
+        excludeDirs += file("$buildDir/classes")
+        excludeDirs += file("$buildDir/kotlin-classes")
+        excludeDirs += file("$buildDir/libs")
+        excludeDirs += file("$buildDir/test-results")
+        sourceDirs += file("$buildDir/generated/source/kapt/main/")
+        sourceDirs += file("src/main/kotlin")
+        sourceDirs += file("src/main/java")
+        testSourceDirs += file("src/test/kotlin")
+        generatedSourceDirs += "$buildDir/generated/source/kapt/main/"
+    }
 }
